Add some link text to header

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,8 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">It works!</h1>
+    <h1 class="display-4 text-success">Header</h1>
+    <a href="#">Become a member</a>
+    <a href="#">Donate</a>
+    <a href="#">Sponsor a fundraiser</a>
 {% endblock %}
