--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,8 +2,14 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">Header</h1>
-    <a href="#">Become a member</a>
-    <a href="#">Donate</a>
-    <a href="#">Sponsor a fundraiser</a>
+    <nav class="navbar navbar-expand-lg indigo">
+        <h1 class="display-4 text-success">Header</h1>
+        <a href="#">Become a member</a>
+        <a href="#">Donate</a>
+        <a href="#">Sponsor a fundraiser</a>
+    </nav>
+
+    <div class="testing-class">
+        <p>Here's some writing</p>
+    </div>
 {% endblock %}
