Adds block for a page header and some first navbar content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,5 +1,9 @@
 .indigo {
-    background-color: #6610f2;
+    background-color: #004de6;
+}
+
+.white-text {
+    color: #fff;
 }
 
 .testing-class {
