--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    <nav class="navbar navbar-expand-lg indigo">
-        <h1 class="display-4 text-success">Header</h1>
-        <a href="#">Become a member</a>
-        <a href="#">Donate</a>
-        <a href="#">Sponsor a fundraiser</a>
+    <nav class="navbar navbar-expand-lg container-fluid indigo white-text">
+        <h1 class="display-4 text-light">White Whale Fundraising</h1>
+        <a href="#" class="btn btn-lg text-light">Become a member</a>
+        <div class="icon">
+            <i class="fas fa-hand-holding-usd"></i>
+            <a href="#" class="btn btn-lg text-light">Donate</a>
+        </div>
+        <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
     </nav>
 
     <div class="testing-class">
