Adds extra navbar links and their icons

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,6 +6,15 @@
     color: #fff;
 }
 
+.logo {
+    margin-left: 10px;
+}
+
 .testing-class {
     display: none;
+}
+
+.gutter-remove {
+    padding-right: 0px !important;
+    padding-left: 0px !important;
 }
