--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,35 @@
     <title>White Whale Fundraising {% block extra_title %}{% endblock %}</title>
 </head>
 <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top gutter-remove">
+        
+    <nav class="navbar navbar-expand-lg justify-content-center indigo">
+        <div class="container-fluid gutter-remove">
+            <h1 class="display-5 text-light logo">White Whale Fundraising</h1>
+            <a href="#" class="btn btn-lg text-light">Become a member</a>
+            <div class="icon">
+                <i class="fas fa-hand-holding-usd text-light"></i>
+                <a href="#" class="btn btn-lg text-light">Donate</a>
+            </div>
+            <div class="icon">
+                <i class="fas fa-chart-line text-light"></i>
+                <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
+            </div>
+            <div class="icon">
+                <i class="fas fa-sign-in-alt text-light"></i>
+                <a href="#" class="btn btn-lg text-light">Sign in</a>
+            </div>
+            <div class="icon">
+                <i class="far fa-user-circle text-light"></i>
+                <a href="#" class="btn btn-lg text-light">My account</a>
+            </div>
+        </div>
+    </nav>
+
+    <div class="testing-class">
+        <p>Here's some writing</p>
+    </div>
+    </header>
 
     {% if messages %}
         <div class="message-container"></div>
