Fixes spelling error in header-nav.html

--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -15,7 +15,7 @@
         <!-- {% if request.user.is_authenticated %} -->
         <li class="nav-item">
             <i class="fas fa-sign-in-alt text-light"></i>
-            <a href="#" class="btn btn-lg text-light">My acount</a>
+            <a href="{% url 'profile' %}" class="btn btn-lg text-light">My account</a>
         </li>
         <!-- {% else %} -->
         <li class="nav-item">
