--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,5 +12,12 @@
 {% endblock %}
 
 {% block content %}
+<div class="hero-image">
+    <div class="hero-text">
+        <h1>I am John Doe</h1>
+        <p>And I'm a Photographer</p>
+        <button>Hire me</button>
+    </div>
+</div>
     <div>Am I in the right place?</div>
 {% endblock %}
