--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -6,7 +6,7 @@
         </li>
         <li class="nav-item">
             <i class="fas fa-hand-holding-usd text-light"></i>
-            <a href="#" class="btn btn-lg text-light">Donate</a>
+            <a href="{% url 'donation_form' %}" class="btn btn-lg text-light">Donate</a>
         </li>
         <li class="nav-item">
             <i class="fas fa-chart-line text-light"></i>
