Adds radio checks to donation form

--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -1,3 +1,10 @@
 .donation-form-card {
     margin: 30px;
+    background-color: #A7C7E7;
+    border-radius: 4px;
+    position: relative;
+}
+
+.form-display {
+    display: inline;
 }
