--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -20,6 +20,77 @@
                 <hr>
                 <h3>Donation form</h3>
                 <h4>Your donation will help keep endangered marine species alive for future generations. This is your gift to them.</h4>
+                <hr>
+                <form action="" method="POST" class="form-display" id="payment-form">
+                    <div>
+                        <input type="radio" class="form-display" id="amount-5" name="amount" value="5">
+                            <label for="amount-5">
+                            <!-- <span>
+                                <span></span>
+                            </span> -->
+                            <em>
+                                <strong>£5</strong>
+                            </em>
+                            </label>
+                    </div>
+                    <div>
+                        <input type="radio" class="form-display" id="amount-10" name="amount" value="10">
+                            <label for="amount-10">
+                            <!-- <span>
+                                <span></span>
+                            </span> -->
+                            <em>
+                                <strong>£10</strong>
+                            </em>
+                            </label>
+                    </div>
+                    <div>
+                        <input type="radio" class="form-display" id="amount-15" name="amount" value="15">
+                            <label for="amount-15">
+                            <!-- <span>
+                                <span></span>
+                            </span> -->
+                            <em>
+                                <strong>£15</strong>
+                            </em>
+                            </label>
+                    </div>
+                    <div>
+                        <input type="radio" id="amount-25" name="amount" value="25">
+                            <label for="amount-25">
+                            <!-- <span>
+                                <span></span>
+                            </span> -->
+                            <em>
+                                <strong>£25</strong>
+                            </em>
+                            </label>
+                    </div>
+                    <div>
+                        <input type="radio" id="amount-50" name="amount" value="50">
+                            <label for="amount-50">
+                            <!-- <span>
+                                <span></span>
+                            </span> -->
+                            <em>
+                                <strong>£50</strong>
+                            </em>
+                            </label>
+                    </div>
+                    <div class="other">
+                        <label for="amount">Other (enter amount):</label>
+                        <input name="amount" id="amount" required>
+                    </div>
+
+                    <div>
+                        <input type="text" name="email" placeholder="Email address" required>
+                    </div>
+
+                    <div>
+                        <input type="number" name="name" placeholder="Name" required>
+                    </div>
+
+                </form>
             </div>
         </div>
     </div>
