Tries and fails to add a radio unchecking script to the donations form

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -81,9 +81,9 @@
                             </em>
                             </label>
                     </div>
-                    <div class="other">
+                    <div class="other" id="other-value">
                         <label for="amount">Other (enter amount):</label>
-                        <input name="amount" id="amount-custom" required>
+                        <input name="amount" id="amount-custom">
                     </div>
 
                     <div>
