--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -83,15 +83,39 @@
                     </div>
                     <div class="other" id="other-value">
                         <label for="amount">Other (enter amount):</label>
-                        <input name="amount" id="amount-custom">
+                        <input type="text" name="amount" id="amount-custom">
                     </div>
 
                     <div>
+                        <label for="email">Email address</label>
                         <input type="text" name="email" placeholder="Email address" required>
                     </div>
 
                     <div>
-                        <input type="number" name="name" placeholder="Name" required>
+                        <label for="title">Title</label>
+                        <select name="title" required>
+                            <option value="">Please select</option>
+                            <option value="Dr.">Dr.</option>
+                            <option value="Master">Master</option>
+                            <option value="Miss">Miss</option>
+                            <option value="Mr.">Mr.</option>
+                            <option value="Mrs.">Mrs.</option>
+                            <option value="Ms.">Ms.</option>
+                            <option value="Mx.">Mx.</option>
+                            <option value="Rev.">Rev.</option>
+                            <option value="Sir">Sir</option>
+                            <option value="Lord">Lord</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="first-name">First name</label>
+                        <input type="text" name="first-name" placeholder="First name" required>
+                    </div>
+
+                    <div>
+                        <label for="last-name">Last name</label>
+                        <input type="text" name="last-name" placeholder="Last name" required>
                     </div>
 
                 </form>
