--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -87,12 +87,12 @@
                     </div>
 
                     <div>
-                        <label for="email">Email address</label>
+                        <label for="email">Email address *</label>
                         <input type="text" name="email" placeholder="Email address" required>
                     </div>
 
                     <div>
-                        <label for="title">Title</label>
+                        <label for="title">Title *</label>
                         <select name="title" required>
                             <option value="">Please select</option>
                             <option value="Dr.">Dr.</option>
@@ -109,14 +109,16 @@
                     </div>
 
                     <div>
-                        <label for="first-name">First name</label>
-                        <input type="text" name="first-name" placeholder="First name" required>
+                        <label for="first-name">First name *</label>
+                        <input type="text" name="first-name" placeholder="First name" min="2" required>
                     </div>
 
                     <div>
-                        <label for="last-name">Last name</label>
+                        <label for="last-name">Last name *</label>
                         <input type="text" name="last-name" placeholder="Last name" required>
                     </div>
+
+                    
 
                 </form>
             </div>
