--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -12,16 +12,24 @@
             <i class="fas fa-chart-line text-light"></i>
             <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
         </li>
-        <!-- {% if request.user.is_authenticated %} -->
-        <li class="nav-item">
-            <i class="fas fa-sign-in-alt text-light"></i>
-            <a href="{% url 'profile' %}" class="btn btn-lg text-light">My account</a>
+        <li class="nav-item list-inline-item dropdown">
+            <a href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-lg text-light">
+                <i class="fas fa-sign-in-alt text-light"></i>
+                <p class="my=0">My account</p>
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                {% if request.user.is_authenticated %}
+                    {% if request.user.is_superuser %}
+                        <a href="" class="dropdown-item">Product Management</a>
+                    {% endif %}
+                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                {% else %}
+                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                {% endif %}
+            </div>
         </li>
-        <!-- {% else %} -->
-        <li class="nav-item">
-            <i class="far fa-user-circle text-light"></i>
-            <a href="#" class="btn btn-lg text-light">Sign in</a>
-        </li>
-        <!-- {% endif %} -->
     </ul>
 </div>
