--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,6 +4,11 @@
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
+    {% block corecss %}
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="stylesheet" href="../../static/css/base.css">
+    {% endblock %}
   </head>
   <body>
     {% block body %}
@@ -19,7 +24,7 @@
     </div>
     {% endif %}
 
-    <div>
+    <div class="indigo">
       <strong>Menu:</strong>
       <ul>
         {% if user.is_authenticated %}
@@ -32,6 +37,17 @@
       </ul>
     </div>
     {% block content %}
+      <div class="container header-container">
+        <div class="overlay"></div>
+        <div class="row">
+          <div class="col-6">
+            <div class="allauth-form-inner-content">
+              {% block inner_content %}
+              {% endblock %}
+            </div>
+          </div>
+        </div>
+      </div>
     {% endblock %}
     {% endblock %}
     {% block extra_body %}
