--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -31,6 +32,8 @@
 
     {% block extra_js %}
     {% endblock %}
+
+    {% load crispy_forms_tags %}
 
     <title>White Whale Fundraising {% block extra_title %}{% endblock %}</title>
 </head>
