--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -14,6 +14,8 @@
   <body>
     {% block body %}
 
+    {% include 'includes/header-nav.html' %}
+
     {% if messages %}
     <div>
       <strong>Messages:</strong>
