--- a/templates/includes/header-nav.html
+++ b/templates/includes/header-nav.html
@@ -1,35 +1,54 @@
-<div class="col-8 collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav w-auto mx-auto">
-        <li class="nav-item">
-            <i class="fas fa-users text-light"></i>
-            <a href="#" class="btn btn-lg text-light">Become a member</a>
-        </li>
-        <li class="nav-item">
-            <i class="fas fa-hand-holding-usd text-light"></i>
-            <a href="{% url 'donation_form' %}" class="btn btn-lg text-light">Donate</a>
-        </li>
-        <li class="nav-item">
-            <i class="fas fa-chart-line text-light"></i>
-            <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
-        </li>
-        <li class="nav-item list-inline-item dropdown">
-            <a href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-lg text-light">
-                <i class="fas fa-sign-in-alt text-light"></i>
-                <p class="my=0">My account</p>
-            </a>
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                {% if request.user.is_authenticated %}
-                    {% if request.user.is_superuser %}
-                        <a href="" class="dropdown-item">Product Management</a>
-                    {% endif %}
-                    <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                {% else %}
-                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                {% endif %}
+<header class="fixed-top gutter-remove">
+    <!-- <div class="row"> -->
+    <nav class="col-12 navbar navbar-expand-lg justify-content-center navbar-light indigo">
+        <div class="row flex-wrap container-fluid ">
+            <div class="logo-container col-12 logo-position text-center mx-auto">
+                <a href="{% url 'home' %}" class="navbar-brand text-light logo">
+                    White Whale Fundraising
+                </a>
             </div>
-        </li>
-    </ul>
-</div>
+            <button class="navbar-toggler toggler-style" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="col-8 collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav w-auto mx-auto">
+                    <li class="nav-item">
+                        <i class="fas fa-users text-light"></i>
+                        <a href="#" class="btn btn-lg text-light">Become a member</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fas fa-hand-holding-usd text-light"></i>
+                        <a href="{% url 'donation_form' %}" class="btn btn-lg text-light">Donate</a>
+                    </li>
+                    <li class="nav-item">
+                        <i class="fas fa-chart-line text-light"></i>
+                        <a href="#" class="btn btn-lg text-light">Sponsor a fundraiser</a>
+                    </li>
+                    <li class="nav-item list-inline-item dropdown">
+                        <a href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false" class="btn btn-lg text-light">
+                            <i class="fas fa-sign-in-alt text-light"></i>
+                            <p class="my=0">My account</p>
+                        </a>
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <a href="" class="dropdown-item">Product Management</a>
+                            {% endif %}
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- </div> -->
+</header>
