--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -32,9 +32,11 @@
         <div class="overlay"></div>
         <div class="row">
           <div class="col-12">
-            <div class="allauth-form-inner-content">
-              {% block inner_content %}
-              {% endblock %}
+            <div class="allauth-form-positioner">
+              <div class="allauth-form-inner-content">
+                {% block inner_content %}
+                {% endblock %}
+              </div>
             </div>
           </div>
         </div>
