Further styles donation form for responsiveness

--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -3,6 +3,8 @@
     background-color: #A7C7E7;
     border-radius: 4px;
     position: relative;
+    max-width: 600px;
+    margin: auto;
 }
 
 .form-display {
