--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -20,7 +20,7 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 donation-form-card">
+            <div class="col-12 donation-form-card">
                 <hr>
                 <h3>Donation form</h3>
                 <h4>Your donation will help keep endangered marine species alive for future generations. This is your gift to them.</h4>
@@ -93,7 +93,7 @@
 
                     <div>
                         <label for="title">Title *</label>
-                        <select name="title" required>
+                        <select name="title form-select" required>
                             <option value="">Please select</option>
                             <option value="Dr.">Dr.</option>
                             <option value="Master">Master</option>
@@ -105,6 +105,7 @@
                             <option value="Rev.">Rev.</option>
                             <option value="Sir">Sir</option>
                             <option value="Lord">Lord</option>
+                            <option value="Lady">Lady</option>
                         </select>
                     </div>
 
