--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,3 +146,9 @@ body {
         z-index: 1030;
     }
 }
+
+@media (max-width: 992px) {
+    .allauth-form-positioner {
+        margin: 1rem;
+    }
+}
