--- a/static/css/base.css
+++ b/static/css/base.css
@@ -78,8 +78,9 @@ body {
 
 .allauth-form-positioner {
     background: blueviolet;
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
+    height: auto;
     align-items: center;
     text-align: center;
 }
@@ -149,6 +150,6 @@ body {
 
 @media (max-width: 992px) {
     .allauth-form-positioner {
-        margin: 1rem;
+        /* margin: 1rem; */
     }
 }
