--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -17,7 +17,7 @@
     {% endblock %}
     {% load crispy_forms_tags %}
   </head>
-  <body>
+  <body class="allauth-body">
     {% block body %}
 
     {% include 'includes/header-nav.html' %}
@@ -34,7 +34,7 @@
     {% endif %}
 
     {% block content %}
-      <div class="container header-container">
+      <div class="container-fluid header-container">
         <div class="overlay"></div>
         <div class="row">
           <div class="col-12">
