--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% block meta %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% endblock %}
     <title>{% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
