--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,5 +23,21 @@
                 <hr>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col-lg-4">
+                <p class="text-muted">Default Contact Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="">Update information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-4">
+                <p>Membership status</p>
+            </div>
+            <div class="col-12 col-lg-4">
+                <p>Donation history</p>
+            </div>
+        </div>
         {{ profile }}
 {% endblock %}
