--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,29 @@ h1, h2, h3 {
     font-family: 'Lobster', cursive;
 }
 
+button {
+    display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: indigo;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    margin: 5px;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 20px;
+    text-decoration: none;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
 /* -------------------------------- Header */
 
 .indigo {
