--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,7 +23,7 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
+        <div class="row profile-edit-form">
             <div class="col-12 col-lg-4">
                 <p class="text-muted">Default Contact Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
