Add phone number field to donation form

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -87,11 +87,6 @@
                     </div>
 
                     <div>
-                        <label for="email">Email address *</label>
-                        <input type="text" name="email" placeholder="Email address" required>
-                    </div>
-
-                    <div>
                         <label for="title">Title *</label>
                         <select name="title form-select" required>
                             <option value="">Please select</option>
@@ -119,7 +114,15 @@
                         <input type="text" name="last-name" placeholder="Last name" required>
                     </div>
 
-                    
+                    <div>
+                        <label for="email">Email address *</label>
+                        <input type="text" name="email" placeholder="Email address" required>
+                    </div>
+
+                    <div>
+                        <label for="phone-number">Phone number</label>
+                        <input type="text" name="phone-number" placeholder="Phone number">
+                    </div>
 
                 </form>
             </div>
