Adds submit button to donation form

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -96,6 +96,8 @@
                         {{ donation_form.first_name | as_crispy_field }}
                     </fieldset>
 
+                    <input type="submit" value="Submit" class="btn btn-success">
+
                     <!-- <div>
                         <label for="title">Title *</label>
                         <select name="title form-select" required>
