Changes the giftaid field in the html

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -104,6 +104,7 @@
                         {{ donation_form.street_address1 | as_crispy_field }}
                         {{ donation_form.street_address2 | as_crispy_field }}
                         {{ donation_form.county | as_crispy_field }}
+                        {{ donation_form.gift_aid | as_crispy_field }}
                     </fieldset>
 
                     <input type="submit" value="Submit" class="btn btn-success">
