Adds proper choices field with radio inputs to donation form for amounts

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -93,6 +93,7 @@
 
                     <fieldset>
                         <legend>Details</legend>
+                        {{ donation_form.donation_selectors | as_crispy_field }}
                         {{ donation_form.title | as_crispy_field }}
                         {{ donation_form.first_name | as_crispy_field }}
                         {{ donation_form.last_name | as_crispy_field }}
