--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -33,17 +33,25 @@
                     </div>
 
                     <fieldset>
+                        <p>
+                            You can either select an amount to donate:
+                        </p>
                         <div class="selectors-container">
                             <strong>
                                 <br>
                                 <em>
                                     {{ donation_form.donation_selectors | as_crispy_field }}
                                 </em>
+                            </strong>
+                        </div>
+                        <div class="custom-input-label">
+                            Or enter an specific amount to donate:
                         </div>
                         <div>
                             {{ donation_form.donation_custom | as_crispy_field }}
                         </div>
-                        <legend>Details</legend>
+                        <strong>
+                            <legend>Details</legend>
                             {{ donation_form.title | as_crispy_field }}
                             {{ donation_form.first_name | as_crispy_field }}
                             {{ donation_form.last_name | as_crispy_field }}
@@ -57,6 +65,19 @@
                             {{ donation_form.county | as_crispy_field }}
                             {{ donation_form.gift_aid | as_crispy_field }}
                         </strong>
+                        <div>
+                            <a href="#" id="details-info-button">Why do we need all these details?</a>
+                            <p id="details-info" style="display:none;">White Whale Fundraising uses these details for a number of purposes, such as account management and Gift Aid declarations. Even if you are not 
+                                currently eligible to Gift Aid your donations, we can retroactively apply for Gift Aid on your previous donations should you become eligible at 
+                                some point in the future. All details are held according to GDPR compliance.
+                            </p>
+                        </div>
+                        <div>
+                            <a href="#" id="gift-aid-info-button">What is Gift Aid?</a>
+                            <p id="gift-aid-explanation" style="display:none;">Clicking the box above to confirm you are happy to Gift Aid your donation allows White Whale Fundraising to claim an extra 25p from HMRC for every £1 you 
+                                donate, without it costing you a penny more. 
+                            </p>
+                        </div>
                     </fieldset>
 
                     <input type="submit" value="Submit" class="btn btn-success">
