Edits JS for click events on donation form and removes the inline styling for same

--- a/donations/templates/donations/donation_form.html
+++ b/donations/templates/donations/donation_form.html
@@ -67,14 +67,14 @@
                         </strong>
                         <div>
                             <a href="#" id="details-info-button">Why do we need all these details?</a>
-                            <p id="details-info" style="display:none;">White Whale Fundraising uses these details for a number of purposes, such as account management and Gift Aid declarations. Even if you are not 
+                            <p id="details-info" class="details-info-class">White Whale Fundraising uses these details for a number of purposes, such as account management and Gift Aid declarations. Even if you are not 
                                 currently eligible to Gift Aid your donations, we can retroactively apply for Gift Aid on your previous donations should you become eligible at 
                                 some point in the future. All details are held according to GDPR compliance.
                             </p>
                         </div>
                         <div>
                             <a href="#" id="gift-aid-info-button">What is Gift Aid?</a>
-                            <p id="gift-aid-explanation" style="display:none;">Clicking the box above to confirm you are happy to Gift Aid your donation allows White Whale Fundraising to claim an extra 25p from HMRC for every £1 you 
+                            <p id="gift-aid-explanation" class="gift-aid-explanation-class">Clicking the box above to confirm you are happy to Gift Aid your donation allows White Whale Fundraising to claim an extra 25p from HMRC for every £1 you 
                                 donate, without it costing you a penny more. 
                             </p>
                         </div>
