--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -22,3 +22,11 @@
     float: left;
     margin-bottom: 0.5em;
 }
+
+.details-info-class {
+    display: none;
+}
+
+.gift-aid-explanation-class {
+    display: none;
+}
