Fix the JS for the info buttons on donation form

--- a/donations/static/donations/css/donations.css
+++ b/donations/static/donations/css/donations.css
@@ -23,10 +23,10 @@
     margin-bottom: 0.5em;
 }
 
-.details-info-class {
+#details-info {
     display: none;
 }
 
-.gift-aid-explanation-class {
+#gift-aid-explanation {
     display: none;
 }
