--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -28,6 +28,7 @@
                 <p class="text-muted">Default Contact Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
+                    {{ user }}
                     {{ form|crispy }}
                     <button class="">Update information</button>
                 </form>
