--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     {% if messages %}
         <div class="message-container">
             {% for message in messages %}
-                {% include 'includes/toasts/toast_success.html' %}
+                {% include 'includes/toasts/toast_error.html' %}
             {% endfor %}
         </div>
     {% endif %}
@@ -58,6 +58,9 @@
     {% endblock %}
 
     {% block postloadjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
     {% endblock %}
     
 </body>
