--- a/static/css/base.css
+++ b/static/css/base.css
@@ -178,6 +178,24 @@ button {
     border-color: #222;
 }
 
+/* -------------------------------- Toasts */
+/* Much of the styling for toasts is taken from Boutique Ado, some from Bootstrap */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* -------------------------------- Media Queries */
 
 /* fixed top navbar only on medium and up - taken from Code Institute's Boutique Ado */
